# ClinicalTrialsMatching

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __main__.py  answer.py  docker-compose.yml  filter_trials.py  filtered_trials_diabetes.json  generate_question.py  local_test.py  main.py  output.csv  pyproject.toml  requirements.txt  trials_eligibility.json  trials_eligibility_diabetes.json  trials_for_diabetes.json.json  trials_questions_structured.json  trials_with_questions.json  trials_with_questions_diabetes.json  user_test_.py  workflow_test.py
documentation/: ARCHITECTURE.md  CUSTOM_TOOLS_GUIDE.md  DEVELOPER_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MEMORY_ERROR_HANDLING.md  QUICK_START.md  TOOLS_ARCHITECTURE.md  TOOLS_README.md
documentation/trials docs/: IdentificationModule.csv  OversightModule.csv  SponsorCollaboratorsModule.csv  StatusModule.csv
examples/: add_tools_example.py  example_usage.py  quick_tool_guide.py  specialized_agents.py  tools_management.py
src/: Agent.py  ModelClient.py  __init__.py  agent_manager.py  config.py  custom_tools.py  example_llm.py  get_trials.py  logger.py  logging_config.py  memory.py  response_models.py  tools.py  trials.py
src/routes/: monitoring_routes.py  questionnaire_routes.py  results_routes.py  ui_favorites_routes.py  ui_home_routes.py  ui_patient_routes.py  ui_reports_routes.py  ui_settings_routes.py  (+2 more)
static/: styles.css
templates/: base.html  clinical_trials.html  favorites.html  home.html  patient_profile.html  questionnaire.html  workflow_loading.html
test/: agent_test.py
(+12 files in other folders)
